svn trunk
- (security) wipe temporaray files and sent offline messages before deleting
- (security) properly sanitize incoming file names
- fix receiving of very small files (sometimes got stuck at 0%) 

version 0.9.9.328
- fixed a flaw in the PING-PONG-sequence, where pong messages went missing 
  and got stuck in the middle of the handshake, this fix now dramatically 
  increases connection speed
- fix error in Bulgarian translation

version 0.9.9.324
- (windows) updated tor.exe to version 0.2.2.20-alpha
- fixed crash bug on Ubuntu Karmic and later
- fixed a possible race condition when incoming connection detected
  (not critical and happens only once a week, but still annoying)
- check incoming ping sender address for length and allowed characters
- make the .deb package allow more different python versions (2.5 .. 2.7)
- added some more logging
- added Bulgarian translation

version 0.9.9.292
- prevent possible MITM attack by better verifying incoming pong messages
- prevent possible attack by disallowing most incoming messages 
  on the outgoing connections (only file messages are allowed)
- make it work with Python 2.7.1
- (windows) use current version of Tor.exe (0.2.2.19-alpha)
- (windows) changed build process to use pyinstaller instead of py2exe 
- added chinese translation

version 0.9.9.277
- fix (regression): non ascii characters in messages and filenames
- fix (regression): sending files on win98 immediately disconnected buddy
- added hungarian translation

version 0.9.9.269
- implemented drag 'n' drop file transfer
- "edit contact" in chat window context menu
- "send file" in chat window context menu
- "quit" in main popup menu
- meaningful titles for file open and save dialogs
- removed the "bitmap not found" errors
- the program now runs on Windows 98 SE
- added polish translation
- fixed issue 19: Enter-Key inserted newline before sending
- fixed issue 20: Ask before overwriting files
- fixed issue 27: indication of messages in main window